# masjid-gorontalo

./: README.md  pyproject.toml  start_env.sh
data/: koordinat_masjid.csv  koordinat_masjid.json
map-html/: peta.html
notebook/: globe.ipynb  peta.ipynb
web/: index.html  menu_globe.html
web/map-html/: peta-manual.html
