[tool.poetry]
name = "jurnal-papa"
version = "0.1.0"
description = ""
authors = ["Moh Zulkifli Katili <mohzulkiflikatili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
geopandas = "^1.0.1"
folium = "^0.17.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
